# xtunes

./: .gitignore  .typos.toml  AGENTS.md  BUGS.md  Cargo.toml  FEATURE_HANDOFF.md  HANDOFF.md  MANAGED.md  MIGRATING_TO_SUSTAIN.md  PENDING_REFACTOR.md  PLAN.md  README.md  REFACTOR.md  RELEASING.md  deny.toml  release
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
crates/analysis/: Cargo.toml
crates/analysis/src/: bands.rs  decode.rs  key_bpm.rs  lib.rs  waveform.rs
crates/app/: Cargo.toml
crates/app/src/: instance_lock.rs  main.rs
crates/app_runtime/: Cargo.toml
crates/app_runtime/src/: analysis_scheduler.rs  analysis_scheduler_tests.rs  artwork_fetcher.rs  commands.rs  device_sync.rs  device_sync_scheduler.rs  lib.rs  lib_tests.rs  library_mutation.rs  library_scan.rs  managed_library.rs  metadata_writer.rs  mount.rs  notifications.rs  notifications_tests.rs  notifications_text_tests.rs  online_scheduler.rs  online_scheduler_tests.rs  playback.rs  playlist_folders.rs  playlist_items.rs  playlists.rs  priority.rs  smart_playlists.rs  smart_shuffle_scheduler.rs
crates/app_runtime/src/managed_library/: consolidation.rs  file_ops.rs  import.rs  journal.rs
crates/app_runtime/tests/: priority.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: lib.rs  metadata.rs  mpris.rs
crates/device_sync/: Cargo.toml
crates/device_sync/src/: engine.rs  identity.rs  layout.rs  lib.rs  model.rs  sanitize.rs
crates/domain/: Cargo.toml
crates/domain/src/: acoustic.rs  clock.rs  command.rs  device_sync.rs  id.rs  lib.rs  managed_library.rs  metadata.rs  musical_key.rs  playback.rs  playback_session.rs  playlist.rs  playlist_folder.rs  query.rs  rating.rs  settings.rs  smart_playlist.rs  smart_playlist_defaults.rs  smart_playlist_evaluation.rs  smart_playlist_evaluation_tests.rs  statistics.rs  synced_lyrics.rs  track.rs  track_column_layout.rs  waveform.rs
crates/domain/src/playback/: options.rs  queue.rs  queue_tests.rs  shuffle.rs  source.rs  volume.rs
crates/importer/: Cargo.toml
crates/importer/src/: lib.rs
crates/library_store/: Cargo.toml
crates/library_store/src/: lib.rs  lib_tests.rs  memory.rs  query.rs  schema.rs  sqlite.rs  sqlite_rows.rs
crates/library_store/src/sqlite/: analysis.rs  column_layouts.rs  devices.rs  online.rs  playlists.rs  smart_playlists.rs  smart_shuffle.rs  synced_lyrics.rs  tracks.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs  lib_tests.rs
crates/metadata_remote/: Cargo.toml
crates/metadata_remote/src/: acoustid.rs  client.rs  cover_art_archive.rs  error.rs  http.rs  lib.rs  lrclib.rs  mbid.rs  musicbrainz.rs  service.rs
crates/pioneer/: Cargo.toml
crates/pioneer/src/: anlz.rs  artwork.rs  device_sql.rs  key.rs  lib.rs  model.rs  path_hash.rs  pdb.rs  waveform.rs
crates/playback/: Cargo.toml
crates/playback/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/smart_shuffle/: Cargo.toml
crates/smart_shuffle/src/: affinity.rs  feature.rs  forest.rs  index.rs  lib.rs  model.rs  picker.rs  rng.rs  similarity.rs  trainer.rs
crates/smart_shuffle/tests/: golden_library.rs
crates/ui_gtk/: Cargo.toml
crates/ui_gtk/src/: accent.rs  albums.rs  app.css  app_css.rs  artwork_color.rs  artwork_loader.rs  command_controller.rs  content_stack.rs  date_format.rs  device_panel.rs  height_reveal.rs  lib.rs  library_consolidation.rs  library_import.rs  library_scan.rs  main_window.rs  metadata_diff.rs  mode_bar.rs  now_playing.rs  playlists_header.rs  preferences.rs  shortcuts.rs  shuffle_icon.rs  sidebar.rs  sidebar_context.rs  smart_playlist_editor.rs  status_bar.rs  titlebar.rs  track_context.rs  track_context_ops.rs  track_info.rs  track_table.rs  util.rs  window_chrome.rs
crates/ui_gtk/src/albums/: artwork_loader.rs  model.rs  track_list.rs
crates/ui_gtk/src/main_window/: keyboard.rs  mpris_bridge.rs  playback.rs  playlists.rs  result_consumers.rs  search.rs  sidebar_callbacks.rs  sidebar_collapse.rs  track_callbacks.rs
crates/ui_gtk/src/now_playing/: model.rs  progress_hit_area.rs
crates/ui_gtk/src/preferences/: about_tab.rs  analysis_tab.rs  library_tab.rs  mod.rs  online_tab.rs  shuffle_tab.rs  switch_row.rs
crates/ui_gtk/src/sidebar/: drag_drop.rs  model.rs  row_context.rs
crates/ui_gtk/src/smart_playlist_editor/: model.rs  model_tests.rs
crates/ui_gtk/src/track_info/: artwork.rs  details.rs  diff.rs  file_page.rs  form.rs  format.rs  lyrics.rs
crates/ui_gtk/src/track_table/: cells.rs  columns.rs  empty_row_painter.rs  inline_edit.rs  row.rs
data/: io.github.open_sustain.sustain.desktop  io.github.open_sustain.sustain.metainfo.xml  io.github.open_xtunes.xtunes.desktop
docs/: features.md  migrating-from-itunes.md  migrating-from-rhythmbox.md  migrating-to-sustain.md
packaging/flatpak/: io.github.open_sustain.sustain.yml
