[workspace]
members = [
  "crates/analysis",
  "crates/app",
  "crates/app_runtime",
  "crates/desktop",
  "crates/device_sync",
  "crates/domain",
  "crates/library_store",
  "crates/metadata",
  "crates/metadata_remote",
  "crates/pioneer",
  "crates/playback",
  "crates/search",
  "crates/settings",
  "crates/smart_shuffle",
  "crates/ui_gtk",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.4"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
# Sustain ships as a Debian package, not a crates.io library. Every
# crate in the workspace is private; this opts them all out of `cargo
# publish` and lets cargo-deny accept the unversioned path deps that
# link the crates together.
publish = false

[workspace.dependencies]
gtk = { package = "gtk4", version = "0.10", features = ["v4_18"] }

[workspace.lints.rust]
# `deny` rather than `forbid` so a single, audited module
# (`sustain_app_runtime::priority`) can opt in via `#![allow(unsafe_code)]`
# to wrap the `setpriority` / `ioprio_set` Linux syscalls in safe Rust.
# Every other crate and module still rejects `unsafe`; the per-binary
# `#![forbid(unsafe_code)]` in `crates/app/src/main.rs` reinforces that
# the application binary itself ships no unsafe code.
unsafe_code = "deny"

[workspace.lints.clippy]
panic = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
