[package]
name = "sustain-app-runtime"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sustain_app_runtime"
path = "src/lib.rs"

[dependencies]
async-channel = "2"
trash = "5"
sustain-analysis = { path = "../analysis" }
sustain-settings = { path = "../settings" }
sustain-domain = { path = "../domain" }
sustain-library-store = { path = "../library_store" }
sustain-metadata = { path = "../metadata" }
sustain-metadata-remote = { path = "../metadata_remote" }
sustain-playback = { path = "../playback" }
sustain-search = { path = "../search" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
