[package]
name = "sustain-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sustain_desktop"
path = "src/lib.rs"

[dependencies]
async-channel = "2"
async-io = "2"
sustain-app-runtime = { path = "../app_runtime" }
zbus = "5"

[lints]
workspace = true
