[package]
name = "xtunes-importer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "xtunes_importer"
path = "src/lib.rs"

[dependencies]
xtunes-domain = { path = "../domain" }
xtunes-library-store = { path = "../library_store" }

[lints]
workspace = true
