[package]
name = "sustain-importer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "sustain_importer"
path = "src/lib.rs"

[dependencies]
sustain-domain = { path = "../domain" }
sustain-library-store = { path = "../library_store" }

[lints]
workspace = true
