[package]
name = "sustain-importer"
version = "0.1.0-alpha.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sustain_importer"
path = "src/lib.rs"

[dependencies]
sustain-domain = { path = "../domain" }

[lints]
workspace = true
