[package]
name = "sustain-library-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "sustain_library_store"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.40.0", features = ["bundled"] }
sustain-domain = { path = "../domain" }

[lints]
workspace = true
