[package]
name = "sustain-library-store"
version = "0.1.0-alpha.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sustain_library_store"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
sustain-domain = { path = "../domain" }

[lints]
workspace = true
