[package]
name = "sustain-library-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sustain_library_store"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde_json = "1.0.150"
sustain-domain = { path = "../domain" }

[lints]
workspace = true
