[package]
name = "sustain-metadata"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "sustain_metadata"
path = "src/lib.rs"

[dependencies]
lofty = "0.24.0"
sha2 = "0.11.0"
sustain-domain = { path = "../domain" }

[lints]
workspace = true
