[package]
name = "sustain-metadata-remote"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sustain_metadata_remote"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "3", features = ["json"] }

[lints]
workspace = true
