[package]
name = "sustain-pioneer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sustain_pioneer"
path = "src/lib.rs"

[dependencies]
# Neutral value types: MusicalKey and the WaveformSegments tiers the
# ANLZ serializer consumes. The crate deliberately depends on nothing
# heavier — no DSP, no decoding, no storage — so the Pioneer on-drive
# format lives in isolation from the rest of the application.
sustain-domain = { path = "../domain" }
# Cover-art rendering for the Pioneer artwork table: decode an embedded
# cover and re-encode the 80/240 px JPEG thumbnails the XDJ displays.
# Lean codec set — embedded art is effectively always JPEG or PNG (WebP
# the occasional modern outlier); an unsupported format degrades to "no
# artwork" rather than failing the sync. Only ever exercised during a
# background sync, never on the cold-start path.
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
# Content hashing to de-duplicate identical covers (an album's shared art
# is encoded and stored once). The same SHA-256 already used for track
# fingerprints elsewhere in the workspace — no new hash family.
sha2 = "0.11.0"

[dev-dependencies]
# Scratch device roots for the artwork file-writer tests, and a tiny
# in-memory PNG to exercise decode/resize/encode.
tempfile = "3"

[lints]
workspace = true
