[package]
name = "sustain-playback"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sustain_playback"
path = "src/lib.rs"

[dependencies]
gstreamer = "0.24.5"
sustain-domain = { path = "../domain" }

[lints]
workspace = true
