[package]
name = "xtunes-settings"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "xtunes_settings"
path = "src/lib.rs"

[dependencies]
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
xtunes-domain = { path = "../domain" }

[lints]
workspace = true
