[package]
name = "sustain-settings"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sustain_settings"
path = "src/lib.rs"

[dependencies]
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
sustain-domain = { path = "../domain" }

[lints]
workspace = true
