[package]
name = "sustain-smart-shuffle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sustain_smart_shuffle"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sustain-domain = { path = "../domain" }

[lints]
workspace = true
