[package]
name = "sustain-ui-gtk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "sustain_ui_gtk"
path = "src/lib.rs"

[dependencies]
async-channel = "2"
directories = "6.0.0"
gtk.workspace = true
rusqlite = { version = "0.40.0", features = ["bundled"] }
sustain-app-runtime = { path = "../app_runtime" }
sustain-desktop = { path = "../desktop" }

[lints]
workspace = true
