[package]
name = "sustain-ui-gtk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sustain_ui_gtk"
path = "src/lib.rs"

[dependencies]
async-channel = "2"
directories = "6.0.0"
gtk.workspace = true
rusqlite = { version = "0.39.0", features = ["bundled"] }
sustain-app-runtime = { path = "../app_runtime" }
sustain-desktop = { path = "../desktop" }

[lints]
workspace = true
